# project_buggy

./: CMakeLists.txt  README.md  package.xml  project_buggy.launch
msg/: SpeedMotors.msg
scripts/: action_server_getDirectionRobot.py  connectionToArduino.py  getSpeedFromKeyboard.py  getSpeedFromSocket.py  get_random_speed.py
src/: main_server_rasp.cpp
